--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,25 +1,18 @@
-<mat-toolbar color="primary" class="mat-elevation-z4">
-  <button
-    matIconButton
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
-  >
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>My App</span>
-  <span class="example-spacer"></span>
-  <button
-    matIconButton
-    class="example-icon favorite-icon"
-    aria-label="Example icon-button with heart icon"
-  >
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button
-    matIconButton
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
-    <mat-icon>share</mat-icon>
-  </button>
+<mat-toolbar color="secondary" class="toolbar">
+  <div class="toolbar-content">
+    <span class="dm-sans-bold">Portfolio</span>
+    
+    <div class="nav-buttons">
+      <button mat-button class="nav-button dm-sans" aria-label="About section" (click)="scrollToSection('about')">
+        About
+      </button>
+      <button mat-button class="nav-button dm-sans" aria-label="Work section" (click)="scrollToSection('work')">
+        Work
+      </button>
+      <button mat-button class="nav-button dm-sans" aria-label="Contact section" (click)="scrollToSection('contact')">
+        Contact
+      </button>
+    </div>
+
+  </div>
 </mat-toolbar>
